--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -103,10 +103,10 @@ a:hover {
 }
 
 p {
-	color: #000000;
+	color: #FFFFFF;
 	font-size: large;
 	margin-top: 15px;
-	text-shadow: 0px 1px 0px rgba(255,255,255,.5);
+	text-shadow: 0px 1px 0px rgba(0,0,0,.5);
 }
 
 #notice {
